cmake_minimum_required(VERSION 3.13)
project(2019_POO2_Labo4)

set(CMAKE_CXX_STANDARD 11)

add_executable(2019_POO2_Labo4 main.cpp container/Container.h container/Boat.h container/Bank.h person/Person.h Controller.h person/Parent.h person/Father.h person/Mother.h person/Son.h person/Daughter.h person/PoliceMan.h person/Robber.h)